<?xml version="1.0"?>
<package>
  <name>innok_heros_simulation</name>
  <version>0.0.0</version>
  <description>The Innok Heros simulation metapackage</description>
  
  <maintainer email="sh@innok-robotics.de">Sabrina Heerklotz</maintainer>
  <url type="website">http://wiki.ros.org/Robots/Innok-Heros</url>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <run_depend>innok_heros_control</run_depend>
  <run_depend>innok_heros_description</run_depend>
  <run_depend>innok_heros_gazebo</run_depend>

  <export>
	  <metapackage />

  </export>
</package>